more strategies and better charting

--- a/src/chart/chart.html
+++ b/src/chart/chart.html
@@ -8,9 +8,11 @@
 <body>
 
     <h1>Naive Bot Trader | Charting</h1>
-    <h2 id='status'></h2>
     <div style='max-width:100%;max-height:100%'>
         <canvas id='chart' width='400' height='400'></canvas>
+    </div>
+    <div style='max-width:100%;max-height:100%'>
+        <canvas id='chartTA' width='400' height='400'></canvas>
     </div>
 
 </body>
